KB-13503 | BE | DEV | Create Bulk Notifications API For Peer Validations (#86)
* KB-13503 | BE | DEV | Create Bulk Notifications API For Peer Validations#84

- Route peer validation vs non-peer notifications differently
- Use createdAt from request for both notification types
-- update tests

* KB-13503 | BE | DEV | Create Bulk Notifications API For Peer Validations#84

- Route PEER_EVALUATION_ASSIGNED to peer_validation_requests table
- Route PEER_REVIEW_ASSIGNED to peer_validation_reviews table
- Use single iteration for partitioning action records
- Remove sub_category field before Cassandra insert